--- a/less/laptop.less
+++ b/less/laptop.less
@@ -77,8 +77,14 @@
     }
   }
 
+  .row.word-art{
+    grid-template-columns: 100px repeat(4, 1fr);
+  }
 
-
+  .row.headers{
+    grid-template-columns: 1fr;
+  }
+  
   #section-4-3{
     .half p{
       padding-right: 0;
@@ -154,6 +160,11 @@
     }
   }
 
+  #section-5-8{
+    .title.extra{
+      margin-right: -40px;
+    }
+  }
 
   #section-5-9, #section-5-12, #section-5-13{
     .half p{
@@ -165,6 +176,9 @@
     .fourths{
       .title{
         padding-bottom: 20px;
+      }
+      p{
+        max-width: 250px;
       }
     }
   }
