more laptop/mobile styling

--- a/less/desktop.less
+++ b/less/desktop.less
@@ -152,17 +152,16 @@
         .dos {
             grid-column-end: 4;
         }
-        .row-lined.dark:before {
+        
+    }
+    .row-lined.dark:before, .row-lined:before {
             width: 65%;
         }
-    }
     #section-3-4 {
         .thirds {
             padding-right: 20px;
         }
-        .row-lined:before {
-            width: 65%;
-        }
+        
     }
     #section-4-2 {
         .thirds p {
