--- a/less/nav.less
+++ b/less/nav.less
@@ -28,7 +28,10 @@ nav{
             //opacity: 0;t
         }
         li {
-            padding-left: 20px;
+            padding: 7px 5px 7px 20px;
+            &:first-of-type {
+                padding-top: 14px;
+            }
             &.active{
                 background: @nav-dk;
                 width: 100%;
@@ -59,8 +62,8 @@ nav{
                 }
             }
             a{
-                color: white;
-                line-height: 35px;
+                color: #e7e7e7;
+                line-height: 22px;
                 padding: 10px 0;
                 &.purple {
                     
