long-bow to match table width

--- a/less/content.less
+++ b/less/content.less
@@ -903,10 +903,16 @@ img{
     font-family: 'SegoeUISemiLight';
 }
 
+.bow-wrap{
+    grid-column: span 2;
+    h5{
+        margin-right: 0;
+    }
+}
 
 .long-bow{
     display: inline-block;
-    width: 180px;
+    width: calc(~"100% - 2.75em");
     height: 20px;
     background-repeat: no-repeat;
     background-position: 0 80%;
