--- a/less/laptop.less
+++ b/less/laptop.less
@@ -64,6 +64,9 @@
     grid-column: span 6;
   }
 
+  .long-bow{
+    height: 16px;
+  }
   #section-2-6, #section-3-1, #section-3-2, #section-3-3 {
     .thirds{
       grid-column: span 7;
