span 3 long-bow for mobile

--- a/less/mobile.less
+++ b/less/mobile.less
@@ -57,6 +57,9 @@
     grid-column: span 12;
   }
 
+  .bow-wrap{
+    grid-column: span 3;
+  }
 
   #section-3-4{
     .donts, .dos, .explanation {
