adding section 7 for au revoir

--- a/less/content.less
+++ b/less/content.less
@@ -685,6 +685,10 @@ img{
         margin-bottom: 10px;
     }
 }
+
+.row.colors{
+    grid-column-gap: 40px;
+}
 #section-5-1{
     .thirds{
         grid-template-rows: max-content max-content;
