--- a/less/desktop.less
+++ b/less/desktop.less
@@ -224,6 +224,11 @@
             grid-column: span 3;
         }
     }
+    .upper{
+        font-size: 11px;
+        line-height: 14px;
+        
+    }
     #section-5-5 .thirds .title {
         font-size: 1.5em;
     }
