--- a/less/mobile.less
+++ b/less/mobile.less
@@ -172,6 +172,7 @@
   #section-5-3, #section-5-2{
     .half{
       grid-template-columns: 1fr;
+      grid-column: span 6;
     }
     .subs{
       grid-template-columns: 1fr;
@@ -180,6 +181,9 @@
       .thirds{
         grid-column: span 6;
       }
+    }
+    .half .single{
+      grid-column: span 2;
     }
   }
 
