--- a/less/laptop.less
+++ b/less/laptop.less
@@ -156,9 +156,12 @@
     }
     
     .half, .subs{
-      grid-column: span 5;
+      grid-column: span 6;
     }
   
+    .double.hidden-xs{
+      display: none;
+    }
   }
 
   #section-5-4 .thirds{
