span 2 for 5-5 images

--- a/less/content.less
+++ b/less/content.less
@@ -714,6 +714,9 @@ img{
 #section-5-5{
     .row.v-center .thirds{
         grid-template-rows: 85px 1fr;
+        img{
+            grid-column: span 2;
+        }
     }
     .thirds .title{
         font-size: 2em;
