--- a/less/content.less
+++ b/less/content.less
@@ -443,7 +443,6 @@ img{
     }
     .row-lined.dark {
         &:before {
-            width: 40%;
         }
     }
 
@@ -676,6 +675,11 @@ img{
            grid-column: span 1;
        }
     }
+    .upper{
+        font-size: 11px;
+        line-height: 14px;
+
+    }
     .subs{
         grid-column: span 3;
         grid-template-columns: repeat(3, 1fr);
@@ -780,6 +784,9 @@ img{
             margin-bottom: 10px;
         }
     }
+    //.fourths {
+    //    grid-column: span 3;
+    //}
 }
 
 #section-5-11{
